[package]
name = "actixutils"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.102"
async-trait = "0.1.89"
chrono = "0.4.44"
futures-util = "0.3.32"
jsonwebtoken = "9.3.1"
libsigners = {git="https://github.com/Austin-rgb/libsigners"}
reqwest = "0.13.2"
serde = "1.0.228"
uuid = "1.23.1"
